# aden-py

./: .gitignore  README.md  pyproject.toml
examples/: anthropic_basic.py  autogen_example.py  control_actions.py  cost_control_local.py  crewai_example.py  dify_example.py  gemini_basic.py  haystack_example.py  langflow_example.py  openai_basic.py  pydantic_ai_example.py  swarm_example.py  test_agent_detection.py  test_grpc_tokens.py  test_multi_vendor.py
examples/experiments/: validate_cost_control.py  validate_declarative_config.py  validate_prompt_control.py  validate_prompt_control_anthropic.py  validate_prompt_control_gemini.py
scripts/: publish.sh
src/aden/: __init__.py  agent_context.py  call_stack.py  control_agent.py  control_types.py  declarative_config.py  emitters.py  file_logger.py  http_transport.py  instrument.py  instrument_anthropic.py  instrument_dify.py  instrument_gemini.py  instrument_gemini_grpc.py  instrument_genai.py  instrument_openai.py  meter.py  timescale.py  tool_capture.py  types.py
src/openai_meter/: __init__.py  livekit.py  meter.py  normalize.py  timescale.py  types.py
